--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,10 +17,11 @@
     <fragment
         android:id="@+id/cacheCreationFragment"
         android:name="com.example.georeality.CacheCreationFragment"
-        android:label="fargment_cache_creation"
+        android:label="fragment_cache_creation"
         tools:layout="@layout/fragment_cache_creation" >
         <action
             android:id="@+id/action_cacheCreationFragment_to_mapFragment"
             app:destination="@id/mapFragment" />
     </fragment>
+
 </navigation>
