--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_mapFragment_to_cacheCreationFragment"
             app:destination="@id/cacheCreationFragment" />
+        <action
+            android:id="@+id/action_mapFragment_to_myCachesFragment2"
+            app:destination="@id/myCachesFragment" />
     </fragment>
     <fragment
         android:id="@+id/cacheCreationFragment"
@@ -21,6 +24,15 @@
         tools:layout="@layout/fragment_cache_creation" >
         <action
             android:id="@+id/action_cacheCreationFragment_to_mapFragment"
+            app:destination="@id/mapFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/myCachesFragment"
+        android:name="com.example.georeality.MyCachesFragment"
+        android:label="fragment_my_caches"
+        tools:layout="@layout/fragment_my_caches" >
+        <action
+            android:id="@+id/action_myCachesFragment2_to_mapFragment"
             app:destination="@id/mapFragment" />
     </fragment>
 
