--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -8,6 +8,8 @@
                 android:icon="@drawable/ic_baseline_map_24"/>
             <item android:title="@string/nav_menu_item_logout"
                 android:icon="@drawable/ic_baseline_exit_to_app_24"/>
+            <item android:title="@string/info"
+                android:icon="@drawable/ic_baseline_exit_to_app_24"/>
         </menu>
     </item>
 </menu>
