--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="@string/nav_menu_title">
-        <menu>
-            <item android:title="@string/nav_menu_item_map"
-                android:icon="@drawable/ic_baseline_map_24"/>
-            <item android:title="@string/nav_menu_item_cache"
-                android:icon="@drawable/ic_baseline_map_24"/>
-            <item android:title="@string/nav_menu_item_logout"
-                android:icon="@drawable/ic_baseline_exit_to_app_24"/>
-            <item android:title="@string/info"
-                android:icon="@drawable/ic_baseline_exit_to_app_24"/>
-        </menu>
-    </item>
+    <group android:id="@+id/menu">
+        <item android:title="@string/nav_menu_item_map"
+            android:icon="@drawable/ic_baseline_map_24"/>
+
+        <item android:title="@string/nav_menu_item_cache"
+            android:icon="@drawable/ic_baseline_map_24"/>
+
+        <item android:icon="@drawable/ic_baseline_info_24"
+            android:title="@string/info" />
+    </group>
 </menu>
