--- a/app/src/main/res/layout/fragment_cache_creation.xml
+++ b/app/src/main/res/layout/fragment_cache_creation.xml
@@ -56,23 +56,40 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/recordButton"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="@string/record"
-                android:visibility="gone" />
+                android:orientation="horizontal">
 
-            <TextView
+                <Button
+                    android:id="@+id/recordButton"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/audio_record"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
+
+                <Button
+                    android:id="@+id/playButton"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/audio_play"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
+
+            </LinearLayout>
+
+            <Chronometer
                 android:id="@+id/timerView"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="@string/_00_00"
                 android:textAlignment="center"
-                android:textSize="60sp"
-                android:visibility="gone" />
+                android:textSize="40sp"
+                android:visibility="visible" />
         </LinearLayout>
 
         <Spinner
