--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -46,6 +46,18 @@
         <action
             android:id="@+id/action_infoFragment_to_myCachesFragment"
             app:destination="@id/myCachesFragment" />
+        <action
+            android:id="@+id/action_infoFragment_to_entityFragment"
+            app:destination="@id/entityFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/entityFragment"
+        android:name="com.example.georeality.EntityFragment"
+        android:label="fragment_entity"
+        tools:layout="@layout/fragment_entity" >
+        <action
+            android:id="@+id/action_entityFragment_to_infoFragment"
+            app:destination="@id/infoFragment" />
     </fragment>
 
 </navigation>
