--- a/app/src/main/res/layout/fragment_my_caches.xml
+++ b/app/src/main/res/layout/fragment_my_caches.xml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MyCachesFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<!--
-    <fragment
-        android:id="@+id/myCachesFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="com.example.georeality.MyCachesFragment" />
+    android:layout_height="match_parent"
+    tools:context=".MyCachesFragment"
+    android:id="@+id/myCachesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/my_caches_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />-->
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent" />
+</LinearLayout>
