--- a/app/src/main/res/layout/my_caches_recycler_view_item.xml
+++ b/app/src/main/res/layout/my_caches_recycler_view_item.xml
@@ -8,10 +8,19 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/caches_textView"
+        android:id="@+id/cachesTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
         android:text=""
         android:textSize="22sp" />
+
+    <TextView
+        android:id="@+id/cachesType"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/cachesLatLon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
