--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,8 +17,13 @@
             android:id="@+id/action_mapFragment_to_myCachesFragment2"
             app:destination="@id/myCachesFragment" />
         <action
-            android:id="@+id/action_mapFragment_to_arFragment"
-            app:destination="@id/arFragment" />
+            android:id="@+id/action_mapFragment_to_cacheEntityFragment"
+            app:destination="@id/cacheEntityFragment">
+            <argument
+                android:name="dataClassJson"
+                app:argType="string"
+                android:defaultValue='""' />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/cacheCreationFragment"
@@ -55,9 +60,23 @@
         android:name="com.example.georeality.ArFragment"
         android:label="fragment_ar"
         tools:layout="@layout/fragment_ar" >
+    </fragment>
+    <fragment
+        android:id="@+id/cacheEntityFragment"
+        android:name="com.example.georeality.CacheEntityFragment"
+        android:label="fragment_cache_entity"
+        tools:layout="@layout/fragment_cache_entity" >
         <action
-            android:id="@+id/action_arFragment_to_mapFragment"
-            app:destination="@id/mapFragment" />
+            android:id="@+id/action_cacheEntityFragment_to_arFragment"
+            app:destination="@id/arFragment" />
+        <argument
+            android:name="dataClassJson"
+            app:argType="string"
+            android:defaultValue='""' />
+        <argument
+            android:name="dataClasstype"
+            app:argType="string"
+            android:defaultValue="ar" />
     </fragment>
 
 </navigation>
