--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,8 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InfoFragment">
+    android:orientation="vertical"
+    tools:context=".InfoFragment"
+    android:layout_margin="16dp">
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/info_fragment_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/info_fragment_title"
+        style="@style/TitleTheme"/>
+
+    <TextView
+        android:id="@+id/info_fragment_preview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/info_fragment_preview"
+        android:layout_marginTop="16dp"/>
+
+    <LinearLayout
+        android:id="@+id/redMarkerLinear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
+
+        <ImageView
+            android:id="@+id/info_fragment_red_img"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/ic_baseline_info_24" />
+
+        <TextView
+            android:id="@+id/info_fragment_red_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/info_fragment_red_desc" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/blueMarkerLinear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
+
+        <ImageView
+            android:id="@+id/info_fragment_blue_img"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/ic_baseline_info_24"/>
+
+        <TextView
+            android:id="@+id/info_fragment_blue_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/info_fragment_blue_desc" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/infoWindowLinear"
+        android:layout_marginTop="16dp">
+
+        <ImageView
+            android:id="@+id/info_fragment_infowindow_img"
+            android:layout_width="128dp"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/info_fragment_infowindow_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/info_fragment_infowindow_desc" />
+
+    </LinearLayout>
+
+</LinearLayout>
