--- a/app/src/main/res/layout/fragment_my_caches.xml
+++ b/app/src/main/res/layout/fragment_my_caches.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/myCachesFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyCachesFragment"
-    android:id="@+id/myCachesFragment">
+    android:orientation="vertical"
+    tools:context=".MyCachesFragment">
+
+    <TextView
+        android:id="@+id/my_caches_title"
+        style="@style/TitleTheme"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_caches_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"/>
 </LinearLayout>
