--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,10 @@
         <item name="colorControlNormal">@color/TextOnPrimary</item>
     </style>
 
+    <style name="TitleTheme" parent="AppTheme">
+        <item name="android:textSize">24sp</item>
+    </style>
+
     <style name="LoginTheme" parent="AppTheme">
         <item name="android:windowBackground">@android:color/white</item>
     </style>
