--- a/app/src/main/res/layout/fragment_my_caches.xml
+++ b/app/src/main/res/layout/fragment_my_caches.xml
@@ -7,16 +7,8 @@
     android:orientation="vertical"
     tools:context=".MyCachesFragment">
 
-    <TextView
-        android:id="@+id/my_caches_title"
-        style="@style/TitleTheme"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"/>
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_caches_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="16dp"/>
+        android:layout_height="match_parent"/>
 </LinearLayout>
