--- a/app/src/main/res/layout/navigation_header_layout.xml
+++ b/app/src/main/res/layout/navigation_header_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:text="Email"
+        style="@style/TitleTheme"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
