--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:id="@+id/emailmenu">
+    <group android:id="@+id/emailMenu">
         <item
-            android:id="@+id/useremail"
+            android:id="@+id/userEmail"
             android:enabled="false"
             android:title="@string/email" />
     </group>
@@ -16,7 +16,7 @@
         <item android:icon="@drawable/ic_baseline_info_24"
             android:title="@string/nav_menu_item_info" />
     </group>
-    <group>
+    <group android:id="@+id/logoutMenu">
         <item android:icon="@drawable/ic_baseline_exit_to_app_24"
             android:title="@string/nav_menu_item_logout"/>
     </group>
