--- a/app/src/main/res/layout/fragment_audio_listening.xml
+++ b/app/src/main/res/layout/fragment_audio_listening.xml
@@ -24,6 +24,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <Button
+        android:id="@+id/exitButtonAudio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="288dp"
+        android:text="@string/exit_cache"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guidelineAudio"
+        app:layout_constraintVertical_bias="0.448" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineAudio"
         android:layout_width="wrap_content"
