--- a/app/src/main/res/layout/my_caches_recycler_view_item.xml
+++ b/app/src/main/res/layout/my_caches_recycler_view_item.xml
@@ -11,16 +11,19 @@
         android:id="@+id/cachesTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text=""
         android:textSize="22sp" />
 
     <TextView
         android:id="@+id/cachesType"
+        android:layout_marginStart="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/cachesLatLon"
+        android:layout_marginStart="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
