--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,9 +6,9 @@
     app:startDestination="@id/mapFragment">
 
     <fragment
-        android:id="@+id/mapFragment"
+        android:id="@id/mapFragment"
         android:name="com.example.georeality.MapFragment"
-        android:label="fragment_map"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_map" >
         <action
             android:id="@+id/action_mapFragment_to_cacheCreationFragment"
@@ -26,16 +26,16 @@
     <fragment
         android:id="@+id/cacheCreationFragment"
         android:name="com.example.georeality.CacheCreationFragment"
-        android:label="fragment_cache_creation"
+        android:label="@string/label_cache_creation"
         tools:layout="@layout/fragment_cache_creation" >
         <action
             android:id="@+id/action_cacheCreationFragment_to_mapFragment"
             app:destination="@id/mapFragment" />
     </fragment>
     <fragment
-        android:id="@+id/myCachesFragment"
+        android:id="@id/myCachesFragment"
         android:name="com.example.georeality.MyCachesFragment"
-        android:label="fragment_my_caches"
+        android:label="@string/label_myCaches"
         tools:layout="@layout/fragment_my_caches" >
         <action
             android:id="@+id/action_myCachesFragment_to_infoFragment"
@@ -45,9 +45,9 @@
             app:destination="@id/mapFragment" />
     </fragment>
     <fragment
-        android:id="@+id/infoFragment"
+        android:id="@id/infoFragment"
         android:name="com.example.georeality.InfoFragment"
-        android:label="fragment_info"
+        android:label="@string/label_info"
         tools:layout="@layout/fragment_info" >
         <action
             android:id="@+id/action_infoFragment_to_myCachesFragment"
@@ -56,7 +56,7 @@
     <fragment
         android:id="@+id/arFragment"
         android:name="com.example.georeality.ArFragment"
-        android:label="fragment_ar"
+        android:label="@string/label_ar_cache"
         tools:layout="@layout/fragment_ar" >
         <argument
             android:name="arMarkerJson"
@@ -65,7 +65,7 @@
     <fragment
         android:id="@+id/audioListeningFragment"
         android:name="com.example.georeality.AudioListeningFragment"
-        android:label="fragment_audio_listening"
+        android:label="@string/label_audio_cache"
         tools:layout="@layout/fragment_audio_listening" >
         <argument
             android:name="audioMarkerJson"
